# sol-nft-staking

./: .env.example  .gitignore  Anchor.toml  COMPLETE-TERMINAL-STAKING-SYSTEM.md  DEPLOYMENT-STATUS.md  MAINNET-DEPLOYMENT.md  README-SETUP.md  index.html  nft-data-loader.js  nft-data.json  package-lock.json  server.js
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/api/routes/: staking.ts
backend/src/database/: schema.sql
backend/src/services/: stakingService.ts
generated_metadata/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+961 more)
programs/terminal-staking/: Cargo.toml
programs/terminal-staking/src/: lib.rs
scripts/: create-mainnet-wallet.js  deploy-mainnet.js  direct-mainnet-deploy.js  fix-deployment-issues.md
