[package]
name = "terminal-staking"
version = "0.1.0"
description = "Terminal NFT Staking Program using MPL Core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "terminal_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-core = "0.7.2"
spl-token = "4.0.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = "1.0"
